[package]
name = "passwds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
argon2 = "0.5.0"
clap = { version = "4.3.11", features = ["derive"] }
rpassword = "7.2.0"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
